spacing fix

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -45,6 +45,7 @@
     font-size: 1.5rem;
     color: #e5c07b;
     margin-top: 5px;
+    margin-bottom: 0;
   }
 }
 
@@ -64,7 +65,7 @@
     color: #abb2bf;
     font-size: 18px;
     font-family: 'cascadia', monospace;
-    margin-top: 42px;
+    margin-top: 22px;
 
     @media (max-width: 500px) {
       font-size: 16px;
